# FG25GP_ZorkClone

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: academy.md  cathedral.md  city_market_district.md  docks.md  ducal_estate.md  forest_edge.md  guard_barracks.md  noble_quarter.md  royal_palace.md  village_suburb.md  world.md
include/Villainess/: cli.hpp  game.hpp
include/Villainess/commands/: handlers.hpp  helpers.hpp
include/Villainess/core/: area.hpp  dialogue.hpp  item.hpp  npc.hpp  player.hpp  room.hpp
include/Villainess/game/: dialogue_helpers.hpp
include/Villainess/utilities/: string.hpp  text.hpp
src/: cli.cpp  game.cpp  main.cpp
src/commands/: choices.cpp  dialogue.cpp  helpers.cpp  info.cpp  inspect.cpp  inventory.cpp  navigation.cpp  scheming.cpp  survival.cpp  use.cpp
src/commands/actions/: kill.cpp  search.cpp
src/game/: directions.cpp  lifecycle.cpp  log.cpp  player.cpp  tick.cpp  time.cpp
src/game/items/: book_nobility.cpp  book_persuasion.cpp  bread.cpp  invitation_letter.cpp  items.cpp  key.cpp  nightshade.cpp  poison_vial.cpp  writing_desk_paper.cpp
src/game/items/tools/: knife.cpp  (+2 more)
src/game/npcs/: baroness_vivienne.cpp  butler_graves.cpp  captain_roderick.cpp  cedric.cpp  chef_marcel.cpp  dock_master_holt.cpp  duke_aldric.cpp  elena.cpp  father_matthias.cpp  gardener_thorne.cpp  madame_fortuna.cpp  maid_clara.cpp  merchant_vera.cpp  npcs.cpp  rosalind.cpp  scholar_elias.cpp
src/utilities/: string.cpp  text.cpp
tests/: test_endings.cpp  test_framework.hpp  test_game_state.cpp  test_main.cpp  test_utilities.cpp
(+119 files in other folders)
